"#2 Completed the oidc flow using a client side component."

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,15 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+header, footer {
+  background-color: var(--foreground);
+  color: var(--background);
+}
+
+@media (max-width: 640px) {
+  header, footer {
+    flex-direction: column;
+    text-align: center;
+  }
+}
